# flask-routes-checker

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml  setup.py
flask_route_checker/: routes_checker.py
