[project]
name = "flask-route-checker"
version = "0.1.4"
description = "Check and auto-fix broken Flask route usage in templates"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Sidiq Olasode", email = "sidiqolasode@gmail.com"}
]
dependencies = [
  "colorama",
  "rich",
  "rapidfuzz",
  "requests"
]

[project.scripts]
flask-route-checker = "flask_route_checker.routes_checker:main"